compiler/lume_hir_lower/src/snapshots/lume_hir_lower__tests__loop_snapshots@pred_loop_statement.snap
---
source: compiler/lume_hir_lower/src/tests.rs
description: "while true { let a = 0; }"
---
[
    Statement {
        id: StatementId {
            def: ItemId {
                package: PackageId(
                    0,
                ),
                index: Idx(
                    0,
                ),
            },
            index: Idx(
                0,
            ),
        },
        kind: InfiniteLoop(
            InfiniteLoop {
                id: StatementId {
                    def: ItemId {
                        package: PackageId(
                            0,
                        ),
                        index: Idx(
                            0,
                        ),
                    },
                    index: Idx(
                        0,
                    ),
                },
                block: Block {
                    statements: [
                        Statement {
                            id: StatementId {
                                def: ItemId {
                                    package: PackageId(
                                        0,
                                    ),
                                    index: Idx(
                                        0,
                                    ),
                                },
                                index: Idx(
                                    1,
                                ),
                            },
                            kind: If(
                                If {
                                    id: StatementId {
                                        def: ItemId {
                                            package: PackageId(
                                                0,
                                            ),
                                            index: Idx(
                                                0,
                                            ),
                                        },
                                        index: Idx(
                                            1,
                                        ),
                                    },
                                    cases: [
                                        Condition {
                                            condition: Some(
                                                Expression {
                                                    id: ExpressionId {
                                                        def: ItemId {
                                                            package: PackageId(
                                                                0,
                                                            ),
                                                            index: Idx(
                                                                0,
                                                            ),
                                                        },
                                                        index: Idx(
                                                            2,
                                                        ),
                                                    },
                                                    kind: Literal(
                                                        Literal {
                                                            id: ExpressionId {
                                                                def: ItemId {
                                                                    package: PackageId(
                                                                        0,
                                                                    ),
                                                                    index: Idx(
                                                                        0,
                                                                    ),
                                                                },
                                                                index: Idx(
                                                                    2,
                                                                ),
                                                            },
                                                            kind: Boolean(
                                                                BooleanLiteral {
                                                                    id: ExpressionId {
                                                                        def: ItemId {
                                                                            package: PackageId(
                                                                                0,
                                                                            ),
                                                                            index: Idx(
                                                                                0,
                                                                            ),
                                                                        },
                                                                        index: Idx(
                                                                            2,
                                                                        ),
                                                                    },
                                                                    value: true,
                                                                },
                                                            ),
                                                            location: <internal>:6:10,
                                                        },
                                                    ),
                                                    location: <internal>:6:10,
                                                },
                                            ),
                                            block: Block {
                                                statements: [
                                                    Statement {
                                                        id: StatementId {
                                                            def: ItemId {
                                                                package: PackageId(
                                                                    0,
                                                                ),
                                                                index: Idx(
                                                                    0,
                                                                ),
                                                            },
                                                            index: Idx(
                                                                3,
                                                            ),
                                                        },
                                                        kind: Variable(
                                                            VariableDeclaration {
                                                                id: StatementId {
                                                                    def: ItemId {
                                                                        package: PackageId(
                                                                            0,
                                                                        ),
                                                                        index: Idx(
                                                                            0,
                                                                        ),
                                                                    },
                                                                    index: Idx(
                                                                        3,
                                                                    ),
                                                                },
                                                                name: Identifier {
                                                                    name: "a",
                                                                    location: <internal>:17:18,
                                                                },
                                                                declared_type: None,
                                                                value: Expression {
                                                                    id: ExpressionId {
                                                                        def: ItemId {
                                                                            package: PackageId(
                                                                                0,
                                                                            ),
                                                                            index: Idx(
                                                                                0,
                                                                            ),
                                                                        },
                                                                        index: Idx(
                                                                            4,
                                                                        ),
                                                                    },
                                                                    kind: Literal(
                                                                        Literal {
                                                                            id: ExpressionId {
                                                                                def: ItemId {
                                                                                    package: PackageId(
                                                                                        0,
                                                                                    ),
                                                                                    index: Idx(
                                                                                        0,
                                                                                    ),
                                                                                },
                                                                                index: Idx(
                                                                                    4,
                                                                                ),
                                                                            },
                                                                            kind: Int(
                                                                                IntLiteral {
                                                                                    id: ExpressionId {
                                                                                        def: ItemId {
                                                                                            package: PackageId(
                                                                                                0,
                                                                                            ),
                                                                                            index: Idx(
                                                                                                0,
                                                                                            ),
                                                                                        },
                                                                                        index: Idx(
                                                                                            4,
                                                                                        ),
                                                                                    },
                                                                                    value: 0,
                                                                                    kind: I32,
                                                                                },
                                                                            ),
                                                                            location: <internal>:21:22,
                                                                        },
                                                                    ),
                                                                    location: <internal>:21:22,
                                                                },
                                                                location: <internal>:13:23,
                                                            },
                                                        ),
                                                        location: <internal>:13:23,
                                                    },
                                                ],
                                                location: <internal>:11:25,
                                            },
                                            location: <internal>:0:0,
                                        },
                                        Condition {
                                            condition: None,
                                            block: Block {
                                                statements: [
                                                    Statement {
                                                        id: StatementId {
                                                            def: ItemId {
                                                                package: PackageId(
                                                                    0,
                                                                ),
                                                                index: Idx(
                                                                    0,
                                                                ),
                                                            },
                                                            index: Idx(
                                                                5,
                                                            ),
                                                        },
                                                        kind: Break(
                                                            Break {
                                                                id: StatementId {
                                                                    def: ItemId {
                                                                        package: PackageId(
                                                                            0,
                                                                        ),
                                                                        index: Idx(
                                                                            0,
                                                                        ),
                                                                    },
                                                                    index: Idx(
                                                                        5,
                                                                    ),
                                                                },
                                                                location: <internal>:0:0,
                                                            },
                                                        ),
                                                        location: <internal>:0:0,
                                                    },
                                                ],
                                                location: <internal>:0:0,
                                            },
                                            location: <internal>:0:0,
                                        },
                                    ],
                                    location: <internal>:0:0,
                                },
                            ),
                            location: <internal>:0:0,
                        },
                    ],
                    location: <internal>:0:0,
                },
                location: <internal>:0:25,
            },
        ),
        location: <internal>:0:25,
    },
]
